# Gasnote

./: .gitignore  README.md  database.py  load_env.py  main.py  requirements.txt  roadmap_todo.md
.github/workflows/: rust.yml
engine/: engine_todo.md
engine/gasnote-engine/: Cargo.toml
engine/gasnote-engine/src/: lib.rs
engine/schema/: base.json
imports/: auth01_router.py  user_dependency.py
models/: orm_models.py  pd_models.py  pydantic_models.py
models/utilities/: notebooks_crud.py  token_refresh_crud.py  users_crud.py
models/utilities/OAuth/: auth.py
models/utilities/OAuth/imports/: auth01_router.py  bcrypt_context.py  user_dependency.py
routes/auth/: auth_router.py
routes/notebooks/: notebooks_router.py
routes/user/: user_router.py
routes/users/: user_router.py
routes/website/: website_router.py
static/scripts/engine/: engine_load.js  gasnote_engine.js  gasnote_engine_bg.js  gasnote_engine_bg.wasm
static/styles/: index.css
templates/: engine.html  index.html  tryauth.html
templates/auth/: login.html  register.html
tests/: tests_toto.md
utilities/: auth.py  notebooks_operations.py  token_refresh_operations.py  users_operations.py
utilities/operations/: notebooks_operations.py  users_operations.py
utilities/redirects/: redirect_on_401.py
