[package]
name = "gasnote-engine"
version = "0.1.0"
authors = ["Marcin Sebastian Osmolak-Rogaluk <mosmo2k@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.68"
web-sys = { version = "0.3.49", features = ["console"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.12", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
